2009-12-01  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Escape key in the Search Field should be more User Friendly
        https://bugs.webkit.org/show_bug.cgi?id=32005

        * inspector/front-end/inspector.js:
        (WebInspector.loaded): add mousedown listener on the search field
        (WebInspector.searchFieldManualFocus): user clicked to focus on the search field
        (WebInspector.searchKeyDown): handle escape

2009-12-01  Dave Hyatt  <hyatt@apple.com>

        Reviewed by David Kilzer.

        @namespace directives need to use "maybe_space" in the "maybe_ns_prefix" portion of the grammar to match
        the spec.  Not doing so prevent comments from being used immmediately after the namespace prefix.

        Added fast/css/namespaces-comments.xml

        * css/CSSGrammar.y:

2009-12-01  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Timothy Hatcher.

        Reloading WebInspector from context menu is closing it instead of reloading.
        https://bugs.webkit.org/show_bug.cgi?id=32004

        When reloading WebInspector, don't delete its m_page.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::close):

2009-12-01  Steve Block  <steveblock@google.com>

        Reviewed by Dimitri Glazkov.

        Adds V8 bindings for Geolocation.
        https://bugs.webkit.org/show_bug.cgi?id=30206

        Also adds Geolocation files to Chrome build files.

        * WebCore.gyp/WebCore.gyp: Modified. Corrects list of Geolocation IDL files.
        * WebCore.gypi: Modified. Adds Geolocation files.
        * bindings/v8/DOMObjectsInclude.h: Modified. Adds Geolocation includes.
        * bindings/v8/DerivedSourcesAllInOne.cpp: Modified. Adds Geolocation files.
        * bindings/v8/V8Index.cpp: Modified. Includes Geolocation generated headers.
        * bindings/v8/V8Index.h: Modified. Adds Geolocation types to DOM_OBJECT_TYPES.